--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MovaApp</string>
+    <string name="api_key">f883c4332182d9c730d65d366770f88c</string>
     <string name="welcome_image_description">Welcome Image</string>
+
 </resources>
